--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,12 +2,12 @@
 homeassistant:
   #  allowlist_external_urls:
   #     - "http://images.com/image1.png"
-  allowlist_external_dirs:
-    #  - "/usr/var/dumping-ground"
-    - /tmp/
-    - /config/tmp/
-    - /config/tmp/videos/
-    - /media/GorkelMedia
+  # allowlist_external_dirs:
+  #   #  - "/usr/var/dumping-ground"
+  #   - /tmp/
+  #   - /config/tmp/
+  #   - /config/tmp/videos/
+  #   - /media/GorkelMedia
 
   customize:
     sensor.energyesp32_mt681_zahlerstand_total:
@@ -17,8 +17,8 @@ homeassistant:
 
 default_config:
 
-folder_watcher:
-  - folder: /media/GorkelMedia/
+# folder_watcher:       # Removed due to Version upgrade to 2024.5
+#   - folder: /media/GorkelMedia/
 
 group: !include groups.yaml
 automation: !include automations.yaml
@@ -42,7 +42,23 @@ influxdb:
 # Recorder config
 
 recorder:
-  purge_keep_days: 60
+  purge_keep_days: 45
+
+# Proxmox Integration
+
+proxmoxve:
+  - host: 192.168.1.8
+    username: hass@pve
+    password: 1694518dekjhgksjh
+    verify_ssl: false
+    realm: pve
+    nodes:
+      - node: pve
+        containers:
+          - 100
+          - 102
+          - 103
+          - 104
 
 # Text to speech
 tts:
@@ -70,18 +86,62 @@ input_number:
     mode: box
     icon: mdi:water
 
+mqtt:
+  sensor:
+    - name: "Wasserstand"
+      state_topic: "Wasserstand"
+      unit_of_measurement: "mm"
+
 sensor:
+  # Regen Sensor
+  - platform: statistics
+    name: "Rain last day"
+    entity_id: sensor.rain_last_hour
+    state_characteristic: total
+    max_age:
+      hours: 24
+    sampling_size: 24
+    precision: 0
+
+  - platform: statistics
+    name: "Rain last 2 days"
+    entity_id: sensor.rain_last_hour
+    state_characteristic: total
+    max_age:
+      hours: 48
+    sampling_size: 48
+    precision: 0
+
+  #   # Power others
+  # - platform: total_daily_energy
+  #   name: "Total Daily Energy"
+  #   power_id: my_power_daily
+  #   unit_of_measurement: "kWh"
+  #   state_class: total_increasing
+  #   device_class: energy
+  #   accuracy_decimals: 3
+  #   filters:
+  #     # Multiplication factor from W to kW is 0.001
+  #     - multiply: 0.001
+
+  # # The power sensor to convert, can be any power sensor
+  # - platform: solarnet_power_photovoltaics
+  #   # ...
+  #   power:
+  #     id: my_power_daily
+
   # Power Fronius
+
   - platform: integration
     source: sensor.battery_power_charging
     name: "Total Battery Energy Charged"
-
     method: left
+
   - platform: integration
     source: sensor.battery_power_discharging
     name: "Total Battery Energy Discharged"
-
     method: left
+
   - platform: integration
     source: sensor.power_photovoltaics
     name: "Total Photovoltaics Energy"
@@ -104,14 +164,14 @@ sensor:
       {{ as_timestamp(now()) - (7*86400) }}
     duration: 00:00:10
 
-  - platform: aarlo
-    monitored_conditions:
-      - total_cameras
-      - last_capture
-      - recent_activity
-      - captured_today
-      - battery_level
-      - signal_strength
+  # - platform: aarlo
+  #   monitored_conditions:
+  #     - total_cameras
+  #     - last_capture
+  #     - recent_activity
+  #     - captured_today
+  #     - battery_level
+  #     - signal_strength
 
   - platform: integration
     source: sensor.power_consumption
@@ -132,27 +192,27 @@ sensor:
       - lan
       - firmware
 
-  - platform: luxtronik
-    sensors:
-      - group: calculations
-        id: ID_WEB_Temperatur_TVL
-        friendly_name: Temp Vorlauf
-        icon: mdi:thermometer
+  # - platform: luxtronik2
+  #   sensors:
+  #     - group: calculations
+  #       id: ID_WEB_Temperatur_TVL
+  #       friendly_name: Temp Vorlauf
+  #       icon: mdi:thermometer
 
-      - group: calculations
-        id: ID_WEB_Temperatur_TRL
-        friendly_name: Temp Nachlauf
-        icon: mdi:thermometer
+  #     - group: calculations
+  #       id: ID_WEB_Temperatur_TRL
+  #       friendly_name: Temp Nachlauf
+  #       icon: mdi:thermometer
 
-      - group: calculations
-        id: ID_WEB_Einst_BWS_akt
-        friendly_name: Temp Warmwasser Soll
-        icon: mdi:thermometer
+  #     - group: calculations
+  #       id: ID_WEB_Einst_BWS_akt
+  #       friendly_name: Temp Warmwasser Soll
+  #       icon: mdi:thermometer
 
-      - group: calculations
-        id: ID_WEB_Temperatur_TBW
-        friendly_name: Temp Warmwasser Ist
-        icon: mdi:thermometer
+  #     - group: calculations
+  #       id: ID_WEB_Temperatur_TBW
+  #       friendly_name: Temp Warmwasser Ist
+  #       icon: mdi:thermometer
 
   - platform: template
 
@@ -219,48 +279,61 @@ sensor:
             {%- endif -%}
           {%- endif -%}
 
-  - platform: rest
-    name: kitchen_fire_tablet
-    json_attributes:
-      - ip4
-      - batteryLevel
-      - isPlugged
-      - plugged
-      - kioskMode
-      - screenBrightness
-      - motionDetectorState
-      - maintenanceMode
-      - appFreeMemory
-      - appUsedMemory
-      - totalFreeMemory
-      - totalUsedMemory
-      - mac
-      - startUrl
-      - currentPage
-      - screenOrientation
-      - screenBrightness
-      - screenLocked
-      - screenOn
-      - batteryTemperature
+    ##### spot ernergy sensors ###
 
-    resource: !secret kitchen_fire_tablet_url
-    value_template: "{{ value_json.screenOn }}"
+    epex_spot_price_ct_per_kwh:
+      friendly_name: "Aktueller Strompreis"
+      unit_of_measurement: "ct/kWh"
+      availability_template: '{{ states("sensor.epex_spot_at_price") != "unavailable" }}'
+      value_template: '{{ ((states("sensor.epex_spot_at_price") | float * 0.1) + 1.5)* 1.2 }}'
+    epex_spot_price_eur_per_kwh:
+      friendly_name: "Aktueller Strompreis Euro"
+      unit_of_measurement: "eur/kWh"
+      availability_template: '{{ states("sensor.epex_spot_at_price") != "unavailable" }}'
+      value_template: '{{ ((states("sensor.epex_spot_at_price") | float * 0.001) + 0.015) * 1.2}}'
 
-  - platform: rest
-    name: Kitchen Tablet Settings
-    json_attributes:
-      - timeToScreenOffV2
-      - screenBrightness
-      - microphoneAccess
-      - motionSensitivity
-      - motionDection
-      - motionDetectionAcoustic
-      - motionSensitivityAcoustic
-      - screenOffInDarkness
-      - darknessLevel
-    resource: !secret kitchen_fire_tablet_settings
-    value_template: "{{ value_json.startURL }}"
-    scan_interval: 10
+  # - platform: rest
+  #   name: kitchen_fire_tablet
+  #   json_attributes:
+  #     - ip4
+  #     - batteryLevel
+  #     - isPlugged
+  #     - plugged
+  #     - kioskMode
+  #     - screenBrightness
+  #     - motionDetectorState
+  #     - maintenanceMode
+  #     - appFreeMemory
+  #     - appUsedMemory
+  #     - totalFreeMemory
+  #     - totalUsedMemory
+  #     - mac
+  #     - startUrl
+  #     - currentPage
+  #     - screenOrientation
+  #     - screenBrightness
+  #     - screenLocked
+  #     - screenOn
+  #     - batteryTemperature
+
+  #   resource: !secret kitchen_fire_tablet_url
+  #   value_template: "{{ value_json.screenOn }}"
+
+  # - platform: rest
+  #   name: Kitchen Tablet Settings
+  #   json_attributes:
+  #     - timeToScreenOffV2
+  #     - screenBrightness
+  #     - microphoneAccess
+  #     - motionSensitivity
+  #     - motionDection
+  #     - motionDetectionAcoustic
+  #     - motionSensitivityAcoustic
+  #     - screenOffInDarkness
+  #     - darknessLevel
+  #   resource: !secret kitchen_fire_tablet_settings
+  #   value_template: "{{ value_json.startURL }}"
+  #   scan_interval: 10
 
   # - platform: systemmonitor
   #   resources:
@@ -310,8 +383,8 @@ zha:
   zigpy_config:
     ota:
       otau_directory: /config/zigpy_ota
-      ikea_provider: true
-      ledvance_provider: true
+      extra_ikea_provider: true
+      extra_ledvance_provider: true
       salus_provider: true
       inovelli_provider: true
       thirdreality_provider: true
@@ -327,10 +400,10 @@ logger:
   #  homeassistant.components.zha: debug
   #  zigpy: debug
 
-luxtronik:
-  host: 192.168.1.5
-  port: 8889
-  safe: true
+# luxtronik:
+#   host: 192.168.1.5
+#   port: 8889
+#   safe: true
 
 knx:
   #tunneling:
@@ -447,31 +520,28 @@ knx:
 ifttt:
   key: bl0GPx_6n-05LUN-_dqvoy
 
-aarlo:
-  username: tech@gorkel.de
-  password: TechGorkel555
-  tfa_type: email
-  tfa_source: imap
-  tfa_host: mx2e4e.netcup.net
-  tfa_username: tech@gorkel.de
-  tfa_password: 9Z@_nvowfCq
-  hide_deprecated_services: true
-  refresh_devices_every: 2
-  # stream_timeout: 120
-  reconnect_every: 90
-  backend: sse
+# aarlo:
+#   username: tech@gorkel.de
+#   password: TechGorkel555
+#   tfa_type: email
+#   tfa_source: imap
+#   tfa_host: mx2e4e.netcup.net
+#   tfa_username: tech@gorkel.de
+#   tfa_password: 9Z@_nvowfCq
+#   hide_deprecated_services: true
+#   refresh_devices_every: 2
+#   # stream_timeout: 120
+#   reconnect_every: 90
+#   backend: sse
 
-camera:
-  - platform: aarlo
-
-media_player:
-  - platform: aarlo
-  - platform: bluesound
-    hosts:
-      - host: 192.168.0.143
-        name: Node_Wohnzimmer
-      - host: 192.168.0.114
-        name: NAD_C700
+# media_player:
+# - platform: aarlo
+# - platform: bluesound
+#   hosts:
+#     - host: 192.168.0.143
+#       name: Node_Wohnzimmer
+#     - host: 192.168.0.114
+#       name: NAD_C700
 
 binary_sensor:
   # - platform: workday
@@ -479,10 +549,10 @@ binary_sensor:
   #   province: BW
   - platform: random
     name: runwater-random
-  - platform: aarlo
-    monitored_conditions:
-      - motion
-      - connectivity
+  # - platform: aarlo
+  #   monitored_conditions:
+  #     - motion
+  #     - connectivity
 
 # alexa_media:
 #   accounts:
@@ -541,9 +611,42 @@ template:
         device_class: power
         state: "{{ states('sensor.solarnet_power_photovoltaics') | float(default=0) }}"
 
+        # Regen Sensor
+
+        # Regen Trigger
+
+  - trigger:
+      platform: time_pattern
+      minutes: "0"
+    sensor:
+      - name: "Rain last hour"
+        state: "{{ states('sensor.gw2000a_hourly_rain_rate_piezo')}}"
+        unit_of_measurement: "mm"
+        attributes:
+          updated_at: "{{ now() }}"
+
 # allowlist_external_dirs:
 #   - "/usr/var/dumping-ground"
 #   - "/tmp"
 
 frontend:
   themes: !include_dir_merge_named themes
+  extra_module_url:
+    - /local/card-mod.js
+
+number:
+  - platform: template
+    name: "$devicename brightness"
+    min_value: 0
+    max_value: 255
+    step: 1
+    lambda: |-
+      return id(rgb8x32)->get_brightness();
+    set_action:
+      lambda: |-
+        id(rgb8x32)->set_brightness(x);
+
+#### Time
+# time:
+#   - platform: homeassistant
+#     id: homeassistant_time
