--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,12 +1,3 @@
-learn_switch_light:
-  sequence:
-  - service: remote.learn_command
-    target:
-      entity_id: remote.remote_one_remote
-    data:
-      device: schlafzimmer_light
-      command: toggle
-      command_type: rf
 test:
   alias: Test
   sequence:
@@ -15,34 +6,15 @@ test:
     entity_id: switch.3d_drucker
     domain: switch
   mode: single
-learn_audio_power:
-  sequence:
-  - service: remote.learn_command
-    target:
-      entity_id: remote.remote_one_remote
-    data:
-      device: audio-stereo
-      command: power
 learn_tv_power:
   sequence:
-  - service: remote.learn_command
-    target:
-      entity_id: remote.remote_one_remote
-    data:
-      device: television
+  - data:
+      device: amp_wohnzimmer
       command: power
-learn_tv_commands:
-  sequence:
-  - service: remote.learn_command
+      command_type: ir
+    action: remote.learn_command
     target:
-      entity_id: remote.remote_one_remote
-    data:
-      device: audio-stereo
-      command:
-      - turn on
-      - turn off
-      - volume up
-      - volume down
+      device_id: 13f4fb14a203eebb23f538da3f735e39
 audio_power:
   sequence:
   - service: remote.send_command
@@ -127,20 +99,21 @@ audio_pause_roon:
 play_concentration_jazz:
   alias: Play Concentration Jazz
   sequence:
-  - service: media_player.play_media
-    target:
-      entity_id: media_player.office_hifiberry
-    data:
+  - data:
       media_content_type: music
       media_content_id: Playlists/Jazz in Focus
-  - service: media_player.shuffle_set
+    action: media_player.play_media
     target:
-      entity_id: media_player.office_hifiberry
-    data:
+      device_id: 1114dade8e13e06556e37d1f1db30b1c
+  - data:
       shuffle: true
-  - service: media_player.media_next_track
+    action: media_player.shuffle_set
     target:
-      entity_id: media_player.office_hifiberry
+      device_id: 1114dade8e13e06556e37d1f1db30b1c
+  - action: media_player.media_next_track
+    data: {}
+    target:
+      device_id: 1114dade8e13e06556e37d1f1db30b1c
   mode: single
   icon: mdi:music
 play_concentration_in_the_loop:
@@ -432,3 +405,254 @@ homeoffice_roon_play_swr3:
     data: {}
   mode: single
   icon: mdi:music
+rasen_oben_wasser_an:
+  alias: 'Rasen oben: Wasser an'
+  sequence:
+  - service: ifttt.trigger
+    data:
+      event: rasenwasseran
+  mode: single
+  icon: mdi:grass
+rasen_oben_wasser_aus:
+  alias: 'Rasen oben: Wasser aus'
+  sequence:
+  - service: ifttt.trigger
+    data:
+      event: rasenwasseraus
+  mode: single
+  icon: mdi:grass
+homeoffice_wave2_cool_dramatically:
+  alias: 'Homeoffice: Wave2: Cool dramatically'
+  sequence:
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: select
+    entity_id: 0b0d90e099774589bd9328e732d734ba
+    type: select_option
+    option: Startup
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 3
+      milliseconds: 0
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: select
+    entity_id: 0fa01e6134e03424b31951ad500e1532
+    type: select_option
+    option: Cool
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 3
+      milliseconds: 0
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: number
+    entity_id: ae37fc0817e7e926f144a4172609cd66
+    type: set_value
+    value: 16
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 1
+      milliseconds: 0
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: select
+    entity_id: 7327e647627afbcbe062b6caea636e18
+    type: select_option
+    option: High
+  description: ''
+  icon: mdi:air-conditioner
+homeoffice_wave2_cool_20c_medium:
+  alias: 'Homeoffice: Wave2: Cool 20C Medium'
+  sequence:
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: select
+    entity_id: 0b0d90e099774589bd9328e732d734ba
+    type: select_option
+    option: Startup
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 3
+      milliseconds: 0
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: select
+    entity_id: 0fa01e6134e03424b31951ad500e1532
+    type: select_option
+    option: Cool
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 3
+      milliseconds: 0
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: number
+    entity_id: ae37fc0817e7e926f144a4172609cd66
+    type: set_value
+    value: 20
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 1
+      milliseconds: 0
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: select
+    entity_id: 7327e647627afbcbe062b6caea636e18
+    type: select_option
+    option: Medium
+  description: ''
+  icon: mdi:air-conditioner
+homeoffice_wave2_shutdown:
+  alias: 'Homeoffice: Wave2: ShutDown'
+  sequence:
+  - device_id: 4e81c44f64cc4911a323e0bed6ad67b6
+    domain: select
+    entity_id: 0b0d90e099774589bd9328e732d734ba
+    type: select_option
+    option: Shutdown
+  description: ''
+  icon: mdi:air-conditioner
+get_tibber_prices:
+  alias: Get Tibber Prices
+  sequence:
+  - action: tibber.get_prices
+    metadata: {}
+    data:
+      end: '2024-11-10 00:00:00'
+      start: '2024-11-09 00:00:00'
+    response_variable: energy_overview
+  description: ''
+notification:
+  alias: Notification
+  sequence:
+  - action: notify.alexa_media_uberall
+    metadata: {}
+    data:
+      message: Dies ist ein Test
+      target: alexa_media_uberall
+  description: ''
+wohnzimmer_learn_amp_power:
+  alias: Wohnzimmer learn amp power
+  sequence:
+  - data:
+      device: amp_wohnzimmer
+      command: power
+      command_type: ir
+    action: remote.learn_command
+    target:
+      device_id: 13f4fb14a203eebb23f538da3f735e39
+  description: ''
+wohnzimmer_amp_power_toggle:
+  alias: Wohnzimmer Amp Power toggle
+  sequence:
+  - action: remote.send_command
+    metadata: {}
+    data:
+      num_repeats: 1
+      delay_secs: 0.4
+      hold_secs: 0
+      device: amp_wohnzimmer
+      command: power
+    target:
+      device_id: 13f4fb14a203eebb23f538da3f735e39
+  description: ''
+  icon: mdi:amplifier
+wohnzimmer_learn_amp_volume_up:
+  alias: Wohnzimmer learn amp volume up
+  sequence:
+  - data:
+      device: amp_wohnzimmer
+      command: volume_up
+      command_type: ir
+    action: remote.learn_command
+    target:
+      device_id: 13f4fb14a203eebb23f538da3f735e39
+  description: ''
+wohnzimmer_learn_amp_volume_down:
+  alias: Wohnzimmer learn amp volume down
+  sequence:
+  - data:
+      device: amp_wohnzimmer
+      command: volume_down
+      command_type: ir
+    action: remote.learn_command
+    target:
+      device_id: 13f4fb14a203eebb23f538da3f735e39
+  description: ''
+wohnzimmer_amp_volume_up:
+  alias: Wohnzimmer Amp Volume up
+  sequence:
+  - action: remote.send_command
+    metadata: {}
+    data:
+      num_repeats: 1
+      delay_secs: 0.4
+      hold_secs: 0
+      device: amp_wohnzimmer
+      command: volume_up
+    target:
+      device_id: 13f4fb14a203eebb23f538da3f735e39
+  description: ''
+  icon: mdi:amplifier
+wohnzimmer_amp_volume_down:
+  alias: Wohnzimmer Amp Volume down
+  sequence:
+  - action: remote.send_command
+    metadata: {}
+    data:
+      num_repeats: 1
+      delay_secs: 0.4
+      hold_secs: 0
+      device: amp_wohnzimmer
+      command: volume_down
+    target:
+      device_id: 13f4fb14a203eebb23f538da3f735e39
+  description: ''
+  icon: mdi:amplifier
+wohnzimmer_amp_volume_down_to_zero:
+  alias: Wohnzimmer Amp Volume down to zero
+  sequence:
+  - action: remote.send_command
+    metadata: {}
+    data:
+      num_repeats: 4
+      delay_secs: 0.4
+      hold_secs: 0
+      device: amp_wohnzimmer
+      command: volume_down
+    target:
+      device_id: 13f4fb14a203eebb23f538da3f735e39
+  description: ''
+  icon: mdi:amplifier
+wohnzimmer_music_indirect:
+  alias: 'Wohnzimmer: Music indirect'
+  sequence:
+  - action: script.wohnzimmer_amp_power_toggle
+    metadata: {}
+    data: {}
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 3
+      milliseconds: 0
+  - action: script.wohnzimmer_amp_volume_down_to_zero
+    metadata: {}
+    data: {}
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 3
+      milliseconds: 0
+  - repeat:
+      count: 2
+      sequence:
+      - action: script.wohnzimmer_amp_volume_up
+        metadata: {}
+        data: {}
+  - action: scene.turn_on
+    metadata: {}
+    data:
+      transition: 5
+    target:
+      entity_id: scene.wohnzimmer_indirekt
+  description: ''
+  icon: mdi:account-music-outline
